--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  }
+  },
+  "homepage": "https://pavnimalhotra0507.github.io/fusionRemedies/"
 }
