--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fusion-remedies",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pavnimalhotra0507.github.io/fusionRemedies/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -40,6 +41,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  },
-  "homepage": "https://pavnimalhotra0507.github.io/fusionRemedies/"
+  }
 }
